# rpc-lists

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
src/: client.c  common.h  server.c  util.c  util.h
src/rpc/: list.x
